fixed spacing between nav and changed bg color of carbon footprint page

--- a/public/carbon-footprint.css
+++ b/public/carbon-footprint.css
@@ -1,13 +1,17 @@
 body {
   font-family: "Kumbh Sans", sans-serif;
+  background-color: #f9f3e5;
 }
 
 /* calculator */
 .calculator-container {
   max-width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 50px auto 10px auto;
   text-align: center;
+}
+
+.calculator-container h1 {
+  margin-bottom: 30px;
 }
 
 /* leaderboard */
