--- a/public/style.css
+++ b/public/style.css
@@ -205,23 +205,9 @@
 }
 /* Hero Section CSS */
 .main {
+  padding-top: 50px;
   background-color: #fff;
 }
-
-/* .main__container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-items: center;
-  justify-self: center;
-  margin: 0 auto;
-  height: 90vh;
-  background-color: #fff;
-  z-index: 1;
-  width: 100%;
-  max-width: 1300px;
-  padding: 0 50px;
-}
-*/
 
 .main__container {
   display: flex;
